--- a/conf/conf.xml.example
+++ b/conf/conf.xml.example
@@ -68,6 +68,16 @@
    settings="settings/settings_booz2.xml settings/settings_booz2_ahrs_cmpl.xml"
    gui_color="white"
   />
+  <aircraft
+   name="LisaL_Fixed_wing"
+   ac_id="158"
+   airframe="airframes/LisaL_Booz2_IMU_v1.2_Fw.xml"
+   radio="radios/T6EXAP.xml"
+   telemetry="telemetry/LisaL_Booz2_IMU_v1.2_Fw.xml"
+   flight_plan="flight_plans/basic.xml"
+   settings=" settings/LisaL_Booz2_IMU_v1.2_Fw.xml"
+   gui_color="white"
+  />
 
  <!-- tiny -->
   <aircraft
